--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,6 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
+lib_deps = 
+	adafruit/Adafruit GFX Library@^1.11.5
+	adafruit/Adafruit ST7735 and ST7789 Library@^1.10.0
