--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,8 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-lib_deps = arduino-libraries/SD@^1.2.4
+lib_deps = 
+	arduino-libraries/SD@^1.2.4
+	chris--a/Keypad@^3.1.1
+	adafruit/Adafruit ST7735 and ST7789 Library@^1.10.0
+	adafruit/Adafruit GFX Library@^1.11.5
